# hw2

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: hello.c
