CMAKE_MINIMUM_REQUIRED(VERSION 3.22)

PROJECT(hw2)

SET(CMAKE_C_STANDARD 17)

FILE(GLOB_RECURSE SOURCES "src/*.c")

ADD_EXECUTABLE(hw2 ${SOURCES})

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
    TARGET_COMPILE_OPTIONS(hw2 PRIVATE -g -Wall -Wextra -Wno-unused-parameter -pedantic -fsanitize=address)
    TARGET_LINK_OPTIONS(hw2 PRIVATE -fsanitize=address)
ELSEIF(CMAKE_BUILD_TYPE STREQUAL "Release")
    TARGET_COMPILE_OPTIONS(hw2 PRIVATE -O2 -DNDEBUG)
    TARGET_LINK_OPTIONS(hw2 PRIVATE -s)
ENDIF()